--- a/index.html
+++ b/index.html
@@ -9,18 +9,12 @@
 </head>
 
 <body>
-
-  <main>
+  <header>
     <h1>Cristina Jiménez Martín</h1>
-
-
-
-
-  </main>
-
-
-
-
+    <img
+      src="https://previews.123rf.com/images/olgavolodina/olgavolodina1701/olgavolodina170100311/72259329-mujer-frustrada-en-una-computadora-port%C3%A1til-en-casa.jpg"
+      alt="Chica estresada delante del ordenador">
+  </header>
 </body>
 
 </html>
